--- a/chrome/includes/cascade-responsive.css
+++ b/chrome/includes/cascade-responsive.css
@@ -12,6 +12,7 @@
 
 	#nav-bar #urlbar-container {
 		min-width: 0px !important;
+		width: auto !important;
 	}
 
 	#titlebar {
